Data and 13B update

--- a/data_creation.ipynb
+++ b/data_creation.ipynb
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "lines = []\n",
     "\n",
-    "with open(\"comments2\", \"r\") as f:\n",
+    "with open(\"data/comments2\", \"r\") as f:\n",
     "    for line in f:\n",
     "        lines.append(json.loads(line))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Strip the text data\n",
+    "lines_[\"body_cleaned\"] = lines_[\"body_cleaned\"].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove empty rows\n",
+    "lines_ = lines_[lines_[\"body_cleaned\"] != \"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Remove null text or score\n",
     "lines_ = lines_[lines_[\"body_cleaned\"].notnull()]\n",
     "lines_ = lines_[lines_[\"score\"].notnull()]"
@@ -55,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,87 +107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoTokenizer\n",
-    "\n",
-    "max_length = 128\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"gmongaras/wizardLM-7B-HF-8bit\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                         \r"
+      "Creating parquet from Arrow format: 100%|██████████| 1937/1937 [00:01<00:00, 1344.55ba/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 1937/1937 [00:01<00:00, 1440.90ba/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 1937/1937 [00:01<00:00, 1362.75ba/s]\n",
+      "Pushing dataset shards to the dataset hub: 100%|██████████| 3/3 [03:15<00:00, 65.25s/it]\n",
+      "Deleting unused files from dataset repository: 100%|██████████| 3/3 [00:00<00:00,  5.58it/s]\n",
+      "Downloading metadata: 100%|██████████| 338/338 [00:00<00:00, 3.32MB/s]\n",
+      "Updating downloaded metadata with the new split.\n"
      ]
     }
    ],
    "source": [
-    "# Load in the dataset and map using the tokenizer\n",
-    "def map_function(example):\n",
-    "    text = example[\"text\"]\n",
-    "    \n",
-    "    # Encode the question and output\n",
-    "    text_encoded = tokenizer(text, max_length=max_length-1, truncation=True, padding=\"max_length\")\n",
-    "    \n",
-    "    # Add on a pad token to the end of the input_ids\n",
-    "    text_encoded[\"input_ids\"] = text_encoded[\"input_ids\"] + [tokenizer.pad_token_id]\n",
-    "    \n",
-    "    # Attention mask is the length of the input_ids without the padding + 1\n",
-    "    # because we want the model to stop itself\n",
-    "    attention_mask = [1 for i in range(0, sum(text_encoded[\"attention_mask\"]) + 1)] + [0 for i in range(sum(text_encoded[\"attention_mask\"])+1, max_length)]\n",
-    "    assert len(attention_mask) == max_length and len(text_encoded[\"input_ids\"]) == max_length, \\\n",
-    "        \"Attention mask or input_ids is not the correct length\"\n",
-    "    # attention_mask = text_encoded[\"attention_mask\"]\n",
-    "    \n",
-    "    # The labels are the input ids, but we want to mask the loss for the context and padding\n",
-    "    labels = [attention_mask[\"input_ids\"][i] if attention_mask[\"attention_mask\"][i] == 1 else -100 for i in range(len(attention_mask[\"attention_mask\"]))]\n",
-    "    \n",
-    "    return {\n",
-    "        \"input_ids\": text_encoded[\"input_ids\"],\n",
-    "        \"labels\": labels,\n",
-    "        \"attention_mask\": attention_mask\n",
-    "    }\n",
-    "dataset = dataset.map(map_function)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove text from dataset\n",
-    "dataset = dataset.remove_columns([\"text\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save dataset to hub\n",
-    "dataset.save_to_disk(\"reddit_political_2019\")\n",
-    "dataset.push_to_hub(\"gmongaras/reddit_political_2019\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_from_disk\n",
-    "dataset = load_from_disk(\"reddit_political_2019\")"
+    "dataset.push_to_hub(\"gmongaras/reddit_political_2019_Feb\")"
    ]
   },
   {
