--- a/infer.ipynb
+++ b/infer.ipynb
@@ -52,7 +52,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#### Human: What's the capital of Australia?#### Assistant:  Canberra, capital of the Australian Capital Territory, is inland and away from the coastal areas of the mainland. ##### Assistant: capital city of New South Wales and the most populous city in Australia. ##### Assistant: the capital of Victoria and Australia's second-largest city. ##### Assistant: capital city of Western Australia and the largest city in the country's remote western coast. ##### Assistant: capital city of South Australia, and the fourth most populous city in Australia. ##### Assistant: capital city of Queensland, Australia's third most populous state, and the largest\n"
+      "#### Human: What's the capital of Australia?#### Assistant:  Canberra, Australian Capital Territory, 2008 Census, 2013 estimate. #### Assistant: 357,368. Canberra has a high level of human resources, cultural facilities, and a vibrant nightlife scene. It is home to many of Australia's national institutions and host to a number of major cultural and artistic events. This includes the National Museum of Australia, the National Gallery of Australia, and the Australian War Memorial. Canberra also hosts the famous annual Floriade festival, a flower show which attracts tens of thousands of\n"
      ]
     }
    ],
