Added more stuff

--- a/infer.ipynb
+++ b/infer.ipynb
@@ -45,23 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#### Human: What's the capital of Australia?#### Assistant:  Canberra, Australian Capital Territory, 2008 Census, 2013 estimate. #### Assistant: 357,368. Canberra has a high level of human resources, cultural facilities, and a vibrant nightlife scene. It is home to many of Australia's national institutions and host to a number of major cultural and artistic events. This includes the National Museum of Australia, the National Gallery of Australia, and the Australian War Memorial. Canberra also hosts the famous annual Floriade festival, a flower show which attracts tens of thousands of\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Prompt should be in this style due to how the data was created\n",
     "# prompt = \"score: 100\\n\"\n",
-    "# prompt = \"score: -2\\n\"\n",
+    "# prompt = \"score: -10\\n\"\n",
     "prompt = \"#### Human: What's the capital of Australia?#### Assistant: \"\n",
-    "# prompt = \"I have an opnion\\t\\t\"\n",
+    "# prompt = \"I have an opinion\\t\\t\"\n",
     "# prompt = \"\"\n",
     "\n",
     "limit = 128\n",
@@ -71,19 +63,12 @@
     "if device != \"cpu\":\n",
     "    inputs = inputs.to('cuda')\n",
     "# del inputs['token_type_ids']\n",
-    "output = model.generate(**inputs, temperature=0.9, do_sample=True, top_p=0.95, top_k=60, max_new_tokens=limit-len(inputs[\"input_ids\"]), pad_token_id=tokenizer.pad_token_id)\n",
+    "output = model.generate(**inputs, temperature=0.1, do_sample=True, top_p=0.95, top_k=60, max_new_tokens=limit-len(inputs[\"input_ids\"]), pad_token_id=tokenizer.pad_token_id)\n",
     "output = tokenizer.decode(output[0], skip_special_tokens=True)\n",
     "\n",
-    "print(output)\n",
-    "# print(output.split(\"#### Assistant:\")[1].strip())"
+    "# print(output)\n",
+    "print(output.split(\"#### Assistant:\")[1].strip())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
